cluster/apps/homelab/notifierwhatsapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifierwhatsapp
  namespace: notifierwhatsapp
  labels:
    app: notifierwhatsapp
spec:
  type: ClusterIP
  selector:
    app: notifierwhatsapp
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
