cluster/apps/homelab/notifierwhatsapp/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notifierwhatsapp
  namespace: notifierwhatsapp
spec:
  parentRefs:
    - name: homelab-gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "notifierwhatsapp.martinez-saweczko.es"
  rules:
    - backendRefs:
        - name: notifierwhatsapp
          port: 8080
